Update hobbies and contact adresse

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     <table>
         <tr>
             <td>
-                <h4><a href="http://localhost:63342/Day_41_Intro_Web_HTML/venv/HTML%20-%20Personal%20Site/hobbies.html?_ijt=51iasungnjq8iksgdpies75uoc&_ij_reload=RELOAD_ON_SAVE">My hobbies</a></h4>
+                <h4><a href="hobbies.html">My hobbies</a></h4>
             </td>
             <td>
-               <h4><a href="http://localhost:63342/Day_41_Intro_Web_HTML/venv/HTML%20-%20Personal%20Site/contact.html?_ijt=o7datsperqpaiqp84g6md69mo9&_ij_reload=RELOAD_ON_SAVE">Contact information</a></h4>
+               <h4><a href="contact.html">Contact information</a></h4>
             </td>
         </tr>
      </table>
