--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,5 @@
 
 </body>
 <br>
-<a href="http://localhost:63342/Day_41_Intro_Web_HTML/venv/HTML%20-%20Personal%20Site/index.html?_ijt=lab9a2tpquq0qrpddi578a9lp3&_ij_reload=RELOAD_ON_SAVE">Back to Homepage</a>
+<a href="index.html">Back to Homepage</a>
 </html>
